[package]
name = "agon-cpu-emulator"
version = "0.3.1"
edition = "2021"
authors = ["Tom Morton <tomm8086@gmail.com>"]
license = "BSD-3-Clause"
description = "An emulator of the Agon Light CPU (eZ80) and CPU-controlled peripherals"
keywords = ["Agon Light", "eZ80", "emulator"]
homepage = "https://github.com/tomm/agon-cpu-emulator"
repository = "https://github.com/tomm/agon-cpu-emulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ez80 = { git = "https://github.com/tomm/ez80.git", rev="fed93d21942d0c261ef62f9e712ce4b17096c432"}
#ez80 = { path = "../ez80" }
rand = "*"
